src/test/deca/syntax/invalid/print_invalide_plexer.deca
//Test invalide: Erreur de syntaxe avec instruction (PASSE LE LEXER)

{

}
println("Hello Invalide");